# torq-tile

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md
benchmark/: CMakeLists.txt  main.cpp
benchmark/common/: benchmark_common.h  conv_benchmark_runner.h  dwconv_benchmark_runner.h  gemm_benchmark_runner.h  igemm_benchmark_runner.h  quantized_conv_benchmark_runner.h  quantized_igemm_benchmark_runner.h
benchmark/conv/: bench_conv_f16_f16_rvv.cpp  bench_conv_f32_f32_rvv.cpp  bench_conv_i8_i8_rvv.cpp  bench_igemm_f16_f16_rvv.cpp  bench_igemm_f32_f32_rvv.cpp  bench_igemm_i8_i8_rvv.cpp
benchmark/dwconv/: bench_dwconv_f16_f16_rvv.cpp  bench_dwconv_f32_f32_rvv.cpp
benchmark/gemm/: bench_gemm_bf16_bf16_rvv.cpp  bench_gemm_f16_f16_rvv.cpp  bench_gemm_f16_i4_rvv.cpp  bench_gemm_f32_f32_rvv.cpp  bench_gemm_i8_i4_rvv.cpp  bench_gemm_i8_i8_rvv.cpp
cmake/: riscv64-unknown-linux-gnu-clang.toolchain.cmake  riscv64-unknown-linux-gnu-gcc.toolchain.cmake
examples/convcf_mx1bias_clamp_f16_f16_f16_rvv/: CMakeLists.txt  convcf_mx1bias_clamp_f16_f16_f16_rvv.cpp
examples/convcf_mx1bias_clamp_f16_f16p_f16p_rvv/: CMakeLists.txt  convcf_mx1bias_clamp_f16_f16p_f16p_rvv.cpp
examples/convcf_mx1bias_clamp_f32_f32_f32_rvv/: CMakeLists.txt  convcf_mx1bias_clamp_f32_f32_f32_rvv.cpp
examples/convcf_mx1bias_clamp_f32_f32p_f32p_rvv/: CMakeLists.txt  convcf_mx1bias_clamp_f32_f32p_f32p_rvv.cpp
examples/convcf_mx1bias_reqi32toi8_clamp_qai8_qsi8dx_qai8_rvv/: CMakeLists.txt  convcf_mx1bias_reqi32toi8_clamp_qai8_qsi8dx_qai8_rvv.cpp
examples/convcf_mx1bias_reqi32toi8_clamp_qai8_qsi8dxp_qai8p_rvv/: CMakeLists.txt  convcf_mx1bias_reqi32toi8_clamp_qai8_qsi8dxp_qai8p_rvv.cpp
examples/convcl_1xnbias_clamp_f16_f16_f16t_rvv/: CMakeLists.txt  convcl_1xnbias_clamp_f16_f16_f16t_rvv.cpp
examples/convcl_1xnbias_clamp_f16_f16p_f16p_rvv/: CMakeLists.txt  convcl_1xnbias_clamp_f16_f16p_f16p_rvv.cpp
examples/convcl_1xnbias_clamp_f32_f32_f32t_rvv/: CMakeLists.txt  convcl_1xnbias_clamp_f32_f32_f32t_rvv.cpp
examples/convcl_1xnbias_clamp_f32_f32p_f32p_rvv/: CMakeLists.txt  convcl_1xnbias_clamp_f32_f32p_f32p_rvv.cpp
examples/convcl_1xnbias_reqi32toi8_clamp_qai8_qai8_qsi8cxt_rvv/: CMakeLists.txt  convcl_1xnbias_reqi32toi8_clamp_qai8_qai8_qsi8cxt_rvv.cpp
examples/convcl_1xnbias_reqi32toi8_clamp_qai8_qai8p_qsi8cxp_rvv/: CMakeLists.txt  convcl_1xnbias_reqi32toi8_clamp_qai8_qai8p_qsi8cxp_rvv.cpp
examples/dwconvcf3x3s1_mx1bias_clamp_f16p_f16p_f16p_4x1x1vl_rvv/: CMakeLists.txt  dwconvcf3x3s1_mx1bias_clamp_f16p_f16p_f16p_4x1x1vl_rvv.cpp
examples/dwconvcf3x3s1_mx1bias_clamp_f32p_f32p_f32p_4x1x1vl_rvv/: CMakeLists.txt  dwconvcf3x3s1_mx1bias_clamp_f32p_f32p_f32p_4x1x1vl_rvv.cpp
examples/dwconvcf3x3s2_mx1bias_clamp_f16p_f16p_f16p_2x1x1vl_rvv/: CMakeLists.txt  dwconvcf3x3s2_mx1bias_clamp_f16p_f16p_f16p_2x1x1vl_rvv.cpp
examples/dwconvcf3x3s2_mx1bias_clamp_f32p_f32p_f32p_2x1x1vl_rvv/: CMakeLists.txt  dwconvcf3x3s2_mx1bias_clamp_f32p_f32p_f32p_2x1x1vl_rvv.cpp
examples/dwconvcf5x5s1_mx1bias_clamp_f16p_f16p_f16p_4x1x1vl_rvv/: CMakeLists.txt  dwconvcf5x5s1_mx1bias_clamp_f16p_f16p_f16p_4x1x1vl_rvv.cpp
examples/dwconvcf5x5s1_mx1bias_clamp_f32p_f32p_f32p_4x1x1vl_rvv/: CMakeLists.txt  dwconvcf5x5s1_mx1bias_clamp_f32p_f32p_f32p_4x1x1vl_rvv.cpp
examples/dwconvcf_mx1bias_clamp_f16_f16_f16_1x1vl_rvv/: CMakeLists.txt  dwconvcf_mx1bias_clamp_f16_f16_f16_1x1vl_rvv.cpp
examples/dwconvcf_mx1bias_clamp_f16p_f16p_f16p_1x1vl_rvv/: CMakeLists.txt  dwconvcf_mx1bias_clamp_f16p_f16p_f16p_1x1vl_rvv.cpp
examples/dwconvcf_mx1bias_clamp_f32_f32_f32_1x1vl_rvv/: CMakeLists.txt  dwconvcf_mx1bias_clamp_f32_f32_f32_1x1vl_rvv.cpp
examples/dwconvcf_mx1bias_clamp_f32p_f32p_f32p_1x1vl_rvv/: CMakeLists.txt  dwconvcf_mx1bias_clamp_f32p_f32p_f32p_1x1vl_rvv.cpp
examples/dwconvcl3x3s1_1xnbias_clamp_f16p_f16p_f16p_4x1x1vl_rvv/: CMakeLists.txt  dwconvcl3x3s1_1xnbias_clamp_f16p_f16p_f16p_4x1x1vl_rvv.cpp
examples/dwconvcl3x3s1_1xnbias_clamp_f32p_f32p_f32p_4x1x1vl_rvv/: CMakeLists.txt  dwconvcl3x3s1_1xnbias_clamp_f32p_f32p_f32p_4x1x1vl_rvv.cpp
examples/dwconvcl3x3s2_1xnbias_clamp_f16p_f16p_f16p_2x1x1vl_rvv/: CMakeLists.txt  dwconvcl3x3s2_1xnbias_clamp_f16p_f16p_f16p_2x1x1vl_rvv.cpp
examples/dwconvcl3x3s2_1xnbias_clamp_f32p_f32p_f32p_2x1x1vl_rvv/: CMakeLists.txt  dwconvcl3x3s2_1xnbias_clamp_f32p_f32p_f32p_2x1x1vl_rvv.cpp
examples/dwconvcl5x5s1_1xnbias_clamp_f16p_f16p_f16p_4x1x1vl_rvv/: CMakeLists.txt  dwconvcl5x5s1_1xnbias_clamp_f16p_f16p_f16p_4x1x1vl_rvv.cpp
examples/dwconvcl_1xnbias_clamp_f16_f16_f16t_1x1vl_rvv/: CMakeLists.txt  dwconvcl_1xnbias_clamp_f16_f16_f16t_1x1vl_rvv.cpp
examples/dwconvcl_1xnbias_clamp_f16p_f16p_f16p_1x1vl_rvv/: CMakeLists.txt  dwconvcl_1xnbias_clamp_f16p_f16p_f16p_1x1vl_rvv.cpp
examples/gemm_1xnbias_clamp_f32_bf16p_bf16p_rvv_pack_bt/: CMakeLists.txt  gemm_1xnbias_clamp_f32_bf16p_bf16p_rvv_pack_bt.cpp
examples/gemm_1xnbias_clamp_f32_f32_f32p_rvv_pack_b/: CMakeLists.txt  gemm_1xnbias_clamp_f32_f32_f32p_rvv_pack_b.cpp
examples/gemm_mx1bias_reqi32toi8_clamp_qai8_qsi8dx_qai8_rvv/: CMakeLists.txt  gemm_mx1bias_reqi32toi8_clamp_qai8_qsi8dx_qai8_rvv.cpp
scripts/: format-all.sh
test/: CMakeLists.txt
test/common/: conv_test_runner.h  data_generator.cpp  data_generator.h  dwconv_test_runner.h  gemm_test_runner.h  igemm_test_runner.h  quantize_utils.h  quantized_conv_test_runner.h  quantized_gemm_test_runner.h  quantized_igemm_test_runner.h  reference_conv.cpp  reference_conv.h  reference_dwconv.cpp  reference_dwconv.h  reference_gemm.cpp  reference_gemm.h  test_common.h  verify.cpp  verify.h
test/conv/: test_conv_f16_f16_rvv.cpp  test_conv_f32_f32_rvv.cpp  test_conv_i8_i8_rvv.cpp  test_igemm_f16_f16_rvv.cpp  test_igemm_f32_f32_rvv.cpp  test_igemm_i8_i8_rvv.cpp
test/dwconv/: test_dwconv_f16_f16_rvv.cpp  test_dwconv_f32_f32_rvv.cpp
test/gemm/: test_gemm_bf16_bf16_rvv.cpp  test_gemm_f16_f16_f16_rvv.cpp  test_gemm_f16_f16_rvv.cpp  test_gemm_f16_i4_rvv.cpp  test_gemm_f32_f32_f32_rvv.cpp  test_gemm_f32_f32_rvv.cpp  test_gemm_i8_i4_rvv.cpp  test_gemm_i8_i8_rvv.cpp
(+456 files in other folders)
